; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_common/src/extr_system_api.c_esp_unregister_shutdown_handler.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_common/src/extr_system_api.c_esp_unregister_shutdown_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SHUTDOWN_HANDLERS_NO = common dso_local global i32 0, align 4
@shutdown_handlers = common dso_local global i32** null, align 8
@ESP_OK = common dso_local global i32 0, align 4
@ESP_ERR_INVALID_STATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_unregister_shutdown_handler(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %24, %1
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @SHUTDOWN_HANDLERS_NO, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %27

9:                                                ; preds = %5
  %10 = load i32**, i32*** @shutdown_handlers, align 8
  %11 = load i32, i32* %4, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i32*, i32** %10, i64 %12
  %14 = load i32*, i32** %13, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = icmp eq i32* %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %9
  %18 = load i32**, i32*** @shutdown_handlers, align 8
  %19 = load i32, i32* %4, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32*, i32** %18, i64 %20
  store i32* null, i32** %21, align 8
  %22 = load i32, i32* @ESP_OK, align 4
  store i32 %22, i32* %2, align 4
  br label %29

23:                                               ; preds = %9
  br label %24

24:                                               ; preds = %23
  %25 = load i32, i32* %4, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %4, align 4
  br label %5

27:                                               ; preds = %5
  %28 = load i32, i32* @ESP_ERR_INVALID_STATE, align 4
  store i32 %28, i32* %2, align 4
  br label %29

29:                                               ; preds = %27, %17
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
